--- a/FrontEnd/assets/styletest.css
+++ b/FrontEnd/assets/styletest.css
@@ -220,7 +220,7 @@ li:hover {
 
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+	
 }
 
 .content-filter {
@@ -259,8 +259,6 @@ li:hover {
 .gallery img {
 	width: 100%;
 }
-
-
 
 #contact {
 	width: 50%;
@@ -338,11 +336,14 @@ footer nav ul {
 	justify-content: center;
 	align-items: center;
 	margin-bottom: 5em;
-	gap: 10px;
+	gap: 2em;
+	position: relative;
+}
 
-	span {
-		cursor: pointer;
-	}
+.div-edition span {
+	cursor: pointer;
+	position: absolute;
+	right: 24em;
 }
 
 /** login **/
@@ -375,3 +376,238 @@ footer nav ul {
 #log-link {
 	cursor: pointer;
 }
+
+#modal-section {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	z-index: 2;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
+  }
+  
+  .modal-portfolio {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	justify-content: space-evenly;
+	background-color: white;
+	border-radius: 5px;
+	width: 32%;
+	height: 66%;
+	position: relative;
+	min-height: 500px;
+	min-width: 300px;
+  }
+  .modal-portfolio span {
+	position: absolute;
+	top: 30px;
+	right: 30px;
+  }
+ 
+  .modal-portfolio h3 {
+	margin-top: 10px;
+	font-weight: bold;
+	font-size: 1.5rem;
+  }
+  .modal-portfolio h2 {
+	margin-top: 50px;
+	color: black;
+	font-size: 26px;
+	font-family: Work Sans;
+	font-weight: 400;
+	margin-bottom: 50px;
+  }
+  .gallery-button {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 80%;
+	width: 70%;
+  }
+  .modal-gallery {
+	width: 100%;
+	height: 50%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 40% 40% 40%;
+	grid-column-gap: 10px;
+	grid-row-gap: 30px;
+  }
+  .modal-gallery figure {
+	width: 100%;
+	height: 100%;
+	position: relative;
+  }
+  .modal-gallery figure span {
+	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	background-color: black;
+	height: 18px;
+	width: 18px;
+	border-radius: 2px;
+  }
+  .fa-trash-can {
+	color: white;
+	font-size: 0.6rem;
+	cursor: pointer;
+  }
+  .modal-gallery img {
+	width: 100%;
+	height: 100%;
+  }
+  .add-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 20%;
+	width: 100%;
+	border-top: 1px solid gray;
+  }
+  .add-button .buttons {
+	background-color: #1d6154;
+	padding: 9px 50px;
+	border-radius: 25px;
+	color: white;
+	font-weight: 700;
+	font-size: 1rem;
+	font-family: Syne;
+	cursor: pointer;
+  }
+  .add-button .buttons:hover {
+	background-color: white;
+	border: 1px solid #1d6154;
+	color: #1d6154;
+  }
+  
+  .modal-add {
+	display: none;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	min-height: 500px;
+	min-width: 300px;
+	background-color: white;
+	border-radius: 5px;
+	position: relative;
+	width: 32%;
+	height: 66%;
+  }
+  .left-arrow {
+	position: absolute;
+	top: 30px;
+	left: 15px;
+  }
+  .fa-arrow-left {
+	font-size: 1.5rem;
+	cursor: pointer;
+  }
+  .xmark-fa {
+	position: absolute;
+	top: 30px;
+	right: 15px;
+  }
+  .fa-xmark {
+	font-size: 1.5rem;
+	cursor: pointer;
+  }
+  .modal-add h3 {
+	margin-top: 60px;
+	font-weight: bold;
+	font-size: 1.5rem;
+  }
+  .modal-add form {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	height: 80%;
+	width: 80%;
+	gap: 20px;
+  }
+  .add-photo {
+	display: flex;
+	position: relative;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 30%;
+	background-color: #e8f1f6;
+	gap: 10px;
+  }
+  .add-photo img {
+	display: none;
+	max-width: 100%;
+	height: 100%;
+	z-index: 2;
+	position: absolute;
+  }
+  .fa-image {
+	font-size: 4rem;
+	color: #b9c5cc;
+  }
+  .labelform {
+	display: block;
+	display: flex;
+	align-items: center;
+	background-color: #b9c5cc;
+	border-radius: 15px;
+	height: 30px;
+	padding: 0 20px;
+	color: #306685;
+	cursor: pointer;
+  }
+  .add-photo input {
+	opacity: 0;
+  }
+  #title {
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	height: 8%;
+  }
+  #category-input {
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	height: 8%;
+  }
+  .button-add {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100px;
+	width: 100%;
+	border-top: 1px solid gray;
+  }
+  .button-validation {
+	background-color: #1d6154;
+	padding: 9px 50px;
+	border-radius: 25px;
+	color: white;
+	font-weight: 700;
+	font-size: 1rem;
+	font-family: Syne;
+	cursor: pointer;
+  }
+  .button-add-work {
+	background-color: #a7a7a7;
+	padding: 9px 50px;
+	border-radius: 25px;
+	color: white;
+	font-weight: 700;
+	font-size: 1rem;
+	font-family: Syne;
+	cursor: pointer;
+  }
+  .button-add-work:hover {
+	background-color: white;
+	border: 1px solid #1d6154;
+	color: #1d6154;
+  }
